--- a/DemoWebApp/Views/Home/Index.cshtml
+++ b/DemoWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @using DemoWebApp.ViewModels
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @using TwoTrackResult
-@model IEnumerable<DemoWebApp.ViewModels.BookViewModel>
+@model DemoWebApp.ViewModels.BookListingViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -27,7 +27,7 @@
 
        <form asp-controller="Home" asp-action="Index">
            <p>
-               Title: <input type="text" name="searchfor" />
+               Title: <input type="text" name="searchfor" value="@Model.Searchfor"/>
                <input type="submit" value="search"/>
            </p>
        </form>
@@ -36,13 +36,12 @@
         <div class="list-group-item d-flex list-group-item-action active">
             Books:
         </div>
-        @foreach (var item in Model)
+        @foreach (var book in Model.Books)
         {
-            var book = (BookViewModel) item;
             <a class="list-group-item list-group-item-action d-flex flex-row justify-content-start"
                asp-controller="Home"
                asp-action="DisplayBook" 
-               asp-route-id="@item.Isbn">
+               asp-route-id="@book.Isbn">
                 <div class="p-2"> @book.Author</div>
                 <div class="p-2">@book.Title</div>
                 <div class="p-2">Published: @book.PublicationYear</div>
